// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when apps available matches the snapshot 1`] = `
<section
  className="AppList"
>
  <PageHeader>
    <div
      className="col-9"
    >
      <div
        className="row"
      >
        <h1>
          Applications
        </h1>
        <SearchFilter
          className="margin-l-big"
          key="searchFilter"
          onChange={[Function]}
          onSubmit={[MockFunction]}
          placeholder="search apps..."
          value=""
        />
        <label
          className="checkbox margin-r-big margin-l-big margin-t-big"
          key="listall"
        >
          <input
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Show deleted apps
          </span>
        </label>
      </div>
    </div>
    <div
      className="col-3 text-r align-center"
    >
      <Link
        replace={false}
        to="/catalog"
      >
        <button
          className="deploy-button button button-accent"
        >
          Deploy App
        </button>
      </Link>
    </div>
  </PageHeader>
  <main>
    <LoadingWrapper
      loaded={true}
    >
      <div>
        <CardGrid>
          <AppListItem
            app={
              Object {
                "releaseName": "foo",
              }
            }
            key="foo"
          />
        </CardGrid>
      </div>
    </LoadingWrapper>
  </main>
</section>
`;

exports[`when error present matches the snapshot 1`] = `
<section
  className="AppList"
>
  <PageHeader>
    <div
      className="col-9"
    >
      <div
        className="row"
      >
        <h1>
          Applications
        </h1>
      </div>
    </div>
    <div
      className="col-3 text-r align-center"
    />
  </PageHeader>
  <main>
    <LoadingWrapper
      loaded={true}
    >
      <ErrorSelector
        action="list"
        error="Boom!"
        namespace="default"
        resource="Applications"
      />
    </LoadingWrapper>
  </main>
</section>
`;

exports[`when error present renders a generic error message 1`] = `
<section
  className="AppList"
>
  <PageHeader>
    <div
      className="col-9"
    >
      <div
        className="row"
      >
        <h1>
          Applications
        </h1>
      </div>
    </div>
    <div
      className="col-3 text-r align-center"
    />
  </PageHeader>
  <main>
    <LoadingWrapper
      loaded={true}
    >
      <ErrorSelector
        action="list"
        error="Boom!"
        namespace="default"
        resource="Applications"
      />
    </LoadingWrapper>
  </main>
</section>
`;

exports[`when fetched but not apps available matches the snapshot 1`] = `
<section
  className="AppList"
>
  <PageHeader>
    <div
      className="col-9"
    >
      <div
        className="row"
      >
        <h1>
          Applications
        </h1>
        <SearchFilter
          className="margin-l-big"
          key="searchFilter"
          onChange={[Function]}
          onSubmit={[MockFunction]}
          placeholder="search apps..."
          value=""
        />
        <label
          className="checkbox margin-r-big margin-l-big margin-t-big"
          key="listall"
        >
          <input
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Show deleted apps
          </span>
        </label>
      </div>
    </div>
    <div
      className="col-3 text-r align-center"
    >
      <Link
        replace={false}
        to="/catalog"
      >
        <button
          className="deploy-button button button-accent"
        >
          Deploy App
        </button>
      </Link>
    </div>
  </PageHeader>
  <main>
    <LoadingWrapper
      loaded={true}
    >
      <MessageAlertPage
        header="Supercharge your Kubernetes cluster"
      >
        <div>
          <p
            className="margin-v-normal"
          >
            Deploy applications on your Kubernetes cluster with a single click.
          </p>
        </div>
      </MessageAlertPage>
    </LoadingWrapper>
  </main>
</section>
`;

exports[`while fetching apps loading spinner matches the snapshot 1`] = `
<section
  className="AppList"
>
  <PageHeader>
    <div
      className="col-9"
    >
      <div
        className="row"
      >
        <h1>
          Applications
        </h1>
        <SearchFilter
          className="margin-l-big"
          key="searchFilter"
          onChange={[Function]}
          onSubmit={[MockFunction]}
          placeholder="search apps..."
          value=""
        />
        <label
          className="checkbox margin-r-big margin-l-big margin-t-big"
          key="listall"
        >
          <input
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Show deleted apps
          </span>
        </label>
      </div>
    </div>
    <div
      className="col-3 text-r align-center"
    >
      <Link
        replace={false}
        to="/catalog"
      >
        <button
          className="deploy-button button button-accent"
        >
          Deploy App
        </button>
      </Link>
    </div>
  </PageHeader>
  <main>
    <LoadingWrapper
      loaded={false}
    >
      <div />
    </LoadingWrapper>
  </main>
</section>
`;

exports[`while fetching apps matches the snapshot 1`] = `
<section
  className="AppList"
>
  <PageHeader>
    <div
      className="col-9"
    >
      <div
        className="row"
      >
        <h1>
          Applications
        </h1>
        <SearchFilter
          className="margin-l-big"
          key="searchFilter"
          onChange={[Function]}
          onSubmit={[MockFunction]}
          placeholder="search apps..."
          value=""
        />
        <label
          className="checkbox margin-r-big margin-l-big margin-t-big"
          key="listall"
        >
          <input
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Show deleted apps
          </span>
        </label>
      </div>
    </div>
    <div
      className="col-3 text-r align-center"
    >
      <Link
        replace={false}
        to="/catalog"
      >
        <button
          className="deploy-button button button-accent"
        >
          Deploy App
        </button>
      </Link>
    </div>
  </PageHeader>
  <main>
    <LoadingWrapper
      loaded={false}
    >
      <div />
    </LoadingWrapper>
  </main>
</section>
`;
